Decrease relevance of the person name on homepage. Fix hero on small screens.

--- a/contents/css/small.css
+++ b/contents/css/small.css
@@ -272,6 +272,10 @@ footer .copy {
   transform: scale(1.01);
 }
 
+.hi {
+  margin-top: 60px;
+}
+
 .hi,
 .home .article-description {
   color: #fff;
